[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dpid-lean-pipeline"
version = "0.1.0"
description = "DPID albedo + LEAN roughness PBR texture downsample pipeline (no optimization)"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "imageio"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["dpid_lean*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
